# mx_research_crew

./: README.md  planning.json  planning_task.md  pyproject.toml  report.md  research.json  research_task.md  synthesis_task.md  verification.json
db/: chroma.sqlite3
knowledge/: graymatter_knowledge.txt  sealy_knowledge.txt  strategies.txt
src/mx_researcher/: crew.py  main.py
src/mx_researcher/config/: agents.yaml  tasks.yaml
