[project]
name = "mx_researcher"
version = "0.1.0"
description = "mx_researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
mx_researcher = "mx_researcher.main:run"
run_crew = "mx_researcher.main:run"
train = "mx_researcher.main:train"
replay = "mx_researcher.main:replay"
test = "mx_researcher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
